--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ordinem",
   "main": "expo-router/entry",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "homepage": "https://oriolgds.github.io/ordinem",
   "scripts": {
     "start": "expo start",
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@firebase/auth-compat": "^0.5.7",
     "@gorhom/bottom-sheet": "^5.1.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/app": "^21.14.0",
@@ -38,7 +39,6 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.2.10",
-    "@firebase/auth-compat": "^0.5.7",
     "expo": "~52.0.46",
     "expo-auth-session": "^6.0.3",
     "expo-barcode-scanner": "^13.0.1",
@@ -62,7 +62,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
