--- a/app.json
+++ b/app.json
@@ -1,8 +1,12 @@
 {
   "expo": {
+    "experiments": {
+      "tsconfigPaths": true,
+      "typedRoutes": true
+    },
     "name": "Ordinem",
     "slug": "ordinem",
-    "version": "1.1.1",
+    "version": "1.2.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
@@ -28,10 +32,13 @@
         "android.permission.RECORD_AUDIO"
       ],
       "googleServicesFile": "./google-services.json",
-      "versionCode": 5
+      "versionCode": 6
     },
     "web": {
       "bundler": "metro",
+      "router": {
+        "root": "app"
+      },
       "output": "static",
       "favicon": "./assets/images/ordinem-logo.png",
       "baseUrl": "/ordinem"
