--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "~5.1.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-firebase/app": "^18.7.3",
-    "@react-native-firebase/auth": "^18.7.3",
-    "@react-native-firebase/database": "~21.14.0",
+    "@react-native-firebase/app": "^21.14.0",
+    "@react-native-firebase/auth": "^21.14.0",
+    "@react-native-firebase/database": "^21.14.0",
     "@react-native-google-signin/google-signin": "~13.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -45,6 +45,7 @@
     "expo-camera": "~16.1.7",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.0",
+    "expo-dev-launcher": "^5.1.12",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-linear-gradient": "~14.1.5",
