Seems it works again

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 CLOUDFLARE_API_TOKEN=tEysIZjLD2ZxEW-5e3pt4l9HZ9BfHTU6q7WCeMj4
 CLOUDFLARE_ACCOUNT_ID=36f6b0fa8eb806e137adee7ccbe3a0a3
+
+
+EXPO_PUBLIC_CLOUDFLARE_ACCOUNT_ID=36f6b0fa8eb806e137adee7ccbe3a0a3
+EXPO_PUBLIC_CLOUDFLARE_API_TOKEN=tEysIZjLD2ZxEW-5e3pt4l9HZ9BfHTU6q7WCeMj4
