--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
-    "react-native-dotenv": "~3.4.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-picker-select": "~9.3.1",
     "react-native-reanimated": "~3.17.4",
@@ -79,11 +78,11 @@
     "@types/react-dom": "^19.1.6",
     "@types/react-test-renderer": "~18.3.0",
     "babel-plugin-module-resolver": "~5.0.2",
-    "eas-cli": "~16.3.2",
+    "eas-cli": "^16.17.4",
     "gh-pages": "~6.3.0",
     "jest": "~29.7.0",
     "jest-expo": "~52.0.6",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "^19.0.0",
     "typescript": "~5.3.3"
   },
   "private": true,
