--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ordinem",
   "main": "expo-router/entry",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "homepage": "https://oriolgds.github.io/ordinem",
   "scripts": {
     "start": "expo start --dev-client",
@@ -30,38 +30,35 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "~5.1.2",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-firebase/app": "^21.14.0",
-    "@react-native-firebase/auth": "^21.14.0",
-    "@react-native-firebase/database": "^21.14.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-google-signin/google-signin": "~13.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "~7.2.10",
-    "expo": "^53.0.10",
-    "expo-auth-session": "~6.2.0",
+    "expo": "53.0.20",
+    "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.5",
-    "expo-build-properties": "~0.14.6",
-    "expo-camera": "~16.1.7",
+    "expo-build-properties": "~0.14.8",
+    "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.6",
-    "expo-dev-client": "~5.2.0",
+    "expo-dev-client": "~5.2.4",
     "expo-dev-launcher": "^5.1.12",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "~7.1.5",
-    "expo-modules-core": "~2.4.0",
-    "expo-notifications": "~0.31.3",
-    "expo-router": "~5.0.7",
-    "expo-splash-screen": "~0.30.9",
+    "expo-linking": "~7.1.7",
+    "expo-modules-core": "~2.5.0",
+    "expo-notifications": "~0.31.4",
+    "expo-router": "~5.1.4",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.8",
-    "expo-web-browser": "~14.1.6",
+    "expo-system-ui": "~5.0.10",
+    "expo-web-browser": "~14.2.0",
     "firebase": "^11.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.3",
+    "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-picker-select": "~9.3.1",
     "react-native-reanimated": "~3.17.4",
