--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "expo lint",
     "prebuild-clean": "expo prebuild --clean",
     "build:android": "eas build --platform android --profile production",
-    "build:android-local": "eas build --platform android --profile production --local",
+    "build:android-local": "expo prebuild --clean && eas build --platform android --profile production --local",
     "build:aab": "eas build --platform android --profile production",
     "build:aab-local": "eas build --platform android --profile production --output=build.aab --local",
     "validate:bundle": "./scripts/validate-bundle.sh",
